# voice-translator

./: CONTRIBUTING.md  Cargo.toml  README.md  requirements.txt  voice_translator.py
.github/workflows/: ci.yml  release.yml
src/: audio.rs  lib.rs  pipeline.rs  transcription.rs  translation.rs  ui.rs  vad.rs
tests/: test_voice_translator.py  vad_tests.rs
