[package]
name = "voice-translator"
version = "0.1.1"
edition = "2021"

[dependencies]
# GUI
eframe = "0.29"
egui = "0.29"

# Audio
cpal = "0.15"

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for translation API
reqwest = { version = "0.12", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Time
chrono = "0.4"

# Async traits (the translation module exposes a Translator trait object)
async-trait = "0.1"

[profile.release]
lto = true
codegen-units = 1
